# game-in-cpp

./: Actor.cpp  Actor.h  CMakeLists.txt  Component.cpp  Component.h  Game.cpp  Game.h  Math.cpp  Math.h  Pong.cpp  README.md  Spaceship.cpp  SpriteComponent.cpp  SpriteComponent.h  Vector2.cpp  Vector2.h
